Disabled MapleTree oregen.

--- a/config/cofh/thermalexpansion/florbs.cfg
+++ b/config/cofh/thermalexpansion/florbs.cfg
@@ -58,6 +58,7 @@ Whitelist {
     B:platinum.molten=true
     B:poison=true
     B:pyrotheum=true
+    B:redplasma=true
     B:redstone=true
     B:sewage=true
     B:silver.molten=true
