--- a/config/rftools/main.cfg
+++ b/config/rftools/main.cfg
@@ -62,6 +62,7 @@ dimlets {
 
 
 dimletsettings {
+    I:"rarity.Biome.Desert Oil Field"=3
     I:rarity.Effect.Absorption=4
     I:"rarity.Effect.Absorption II"=5
     I:"rarity.Effect.Absorption III"=6
@@ -175,6 +176,7 @@ dimletsettings {
     I:"rarity.Special.Mediocre Efficiency"=4
     I:rarity.Special.Seed=2
     I:rarity.Special.Shelter=3
+    I:"rfcreate.Biome.Desert Oil Field"=20000
     I:rfcreate.Effect.Absorption=90000
     I:"rfcreate.Effect.Absorption II"=950000
     I:"rfcreate.Effect.Absorption III"=100000
@@ -296,6 +298,7 @@ dimletsettings {
     I:"rfcreate.Special.Mediocre Efficiency"=40000
     I:rfcreate.Special.Peaceful=70000
     I:rfcreate.Special.Shelter=15000
+    I:"rfmaintain.Biome.Desert Oil Field"=4000
     I:rfmaintain.Effect.Absorption=30000
     I:"rfmaintain.Effect.Absorption II"=32000
     I:"rfmaintain.Effect.Absorption III"=36000
@@ -418,6 +421,7 @@ dimletsettings {
     I:rfmaintain.Special.Peaceful=40000
     I:rfmaintain.Special.Seed=0
     I:rfmaintain.Special.Shelter=0
+    I:"ticks.Biome.Desert Oil Field"=300
     I:ticks.Effect.Absorption=900
     I:"ticks.Effect.Absorption II"=900
     I:"ticks.Effect.Absorption III"=900
