--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -79,13 +79,13 @@ general {
     # Set to true to use a static wand beam that shows every single position of the burst, similar to the way it used to work on old botania versions. Warning: Disabled by default because it may be laggy.
     B:wandBeam.static=false
 
-    # The density of each flower patch generataed, defaults to 16, the lower the number, the less each patch will have.
+    # The density of each botania flower patch generataed, defaults to 16, the lower the number, the less each patch will have.
     I:worldgen.flower.density=16
 
-    # The quanity of flower patches to generate in the world, defaults to 2, the lower the number the less patches generate.
+    # The quanity of botania flower patches to generate in the world, defaults to 2, the lower the number the less patches generate.
     I:worldgen.flower.quantity=2
 
-    # The quantity of mushrooms to generate underground, in the world, defaults to 10, the lower the number the less patches generate.
+    # The quantity of botania mushrooms to generate underground, in the world, defaults to 40, the lower the number the less patches generate.
     I:worldgen.mushroom.quantity=40
 }
 
@@ -100,6 +100,18 @@ potions {
 
 
 shedding {
+    # Configuration of Shedding for BambooMod.Firefly
+    S:BambooMod.Firefly.item=
+    I:BambooMod.Firefly.lexiconDisplaySize=40
+    I:BambooMod.Firefly.metadata=0
+    I:BambooMod.Firefly.rate=-1
+
+    # Configuration of Shedding for BambooMod.TrueVillager
+    S:BambooMod.TrueVillager.item=
+    I:BambooMod.TrueVillager.lexiconDisplaySize=40
+    I:BambooMod.TrueVillager.metadata=0
+    I:BambooMod.TrueVillager.rate=-1
+
     # Configuration of Shedding for Bat
     S:Bat.item=
     I:Bat.lexiconDisplaySize=40
@@ -158,6 +170,12 @@ shedding {
     I:Blighter.metadata=0
     I:Blighter.rate=-1
 
+    # Configuration of Shedding for Blizz
+    S:Blizz.item=
+    I:Blizz.lexiconDisplaySize=40
+    I:Blizz.metadata=0
+    I:Blizz.rate=-1
+
     # Configuration of Shedding for Botania.botania:doppleganger
     S:"Botania.botania:doppleganger.item"=
     I:"Botania.botania:doppleganger.lexiconDisplaySize"=40
@@ -169,6 +187,12 @@ shedding {
     I:"Botania.botania:pixie.lexiconDisplaySize"=40
     I:"Botania.botania:pixie.metadata"=0
     I:"Botania.botania:pixie.rate"=-1
+
+    # Configuration of Shedding for BuildCraft|Core.bcRobot
+    S:"BuildCraft|Core.bcRobot.item"=
+    I:"BuildCraft|Core.bcRobot.lexiconDisplaySize"=40
+    I:"BuildCraft|Core.bcRobot.metadata"=0
+    I:"BuildCraft|Core.bcRobot.rate"=-1
 
     # Configuration of Shedding for CaveSpider
     S:CaveSpider.item=
@@ -383,6 +407,30 @@ shedding {
     I:MushroomCow.lexiconDisplaySize=40
     I:MushroomCow.metadata=0
     I:MushroomCow.rate=-1
+
+    # Configuration of Shedding for Natura.FlameSpider
+    S:Natura.FlameSpider.item=
+    I:Natura.FlameSpider.lexiconDisplaySize=40
+    I:Natura.FlameSpider.metadata=0
+    I:Natura.FlameSpider.rate=-1
+
+    # Configuration of Shedding for Natura.FlameSpiderBaby
+    S:Natura.FlameSpiderBaby.item=
+    I:Natura.FlameSpiderBaby.lexiconDisplaySize=40
+    I:Natura.FlameSpiderBaby.metadata=0
+    I:Natura.FlameSpiderBaby.rate=-1
+
+    # Configuration of Shedding for Natura.Imp
+    S:Natura.Imp.item=
+    I:Natura.Imp.lexiconDisplaySize=40
+    I:Natura.Imp.metadata=0
+    I:Natura.Imp.rate=-1
+
+    # Configuration of Shedding for Natura.NitroCreeper
+    S:Natura.NitroCreeper.item=
+    I:Natura.NitroCreeper.lexiconDisplaySize=40
+    I:Natura.NitroCreeper.metadata=0
+    I:Natura.NitroCreeper.rate=-1
 
     # Configuration of Shedding for NetherOres.netherOresHellfish
     S:NetherOres.netherOresHellfish.item=
@@ -807,272 +855,182 @@ shedding {
     I:TConstruct.KingSlime.lexiconDisplaySize=40
     I:TConstruct.KingSlime.metadata=0
     I:TConstruct.KingSlime.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.BrainyZombie
     S:Thaumcraft.BrainyZombie.item=
     I:Thaumcraft.BrainyZombie.lexiconDisplaySize=40
     I:Thaumcraft.BrainyZombie.metadata=0
     I:Thaumcraft.BrainyZombie.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.CultistCleric
     S:Thaumcraft.CultistCleric.item=
     I:Thaumcraft.CultistCleric.lexiconDisplaySize=40
     I:Thaumcraft.CultistCleric.metadata=0
     I:Thaumcraft.CultistCleric.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.CultistKnight
     S:Thaumcraft.CultistKnight.item=
     I:Thaumcraft.CultistKnight.lexiconDisplaySize=40
     I:Thaumcraft.CultistKnight.metadata=0
     I:Thaumcraft.CultistKnight.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.CultistLeader
     S:Thaumcraft.CultistLeader.item=
     I:Thaumcraft.CultistLeader.lexiconDisplaySize=40
     I:Thaumcraft.CultistLeader.metadata=0
     I:Thaumcraft.CultistLeader.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.CultistPortal
     S:Thaumcraft.CultistPortal.item=
     I:Thaumcraft.CultistPortal.lexiconDisplaySize=40
     I:Thaumcraft.CultistPortal.metadata=0
     I:Thaumcraft.CultistPortal.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.EldritchCrab
     S:Thaumcraft.EldritchCrab.item=
     I:Thaumcraft.EldritchCrab.lexiconDisplaySize=40
     I:Thaumcraft.EldritchCrab.metadata=0
     I:Thaumcraft.EldritchCrab.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.EldritchGolem
     S:Thaumcraft.EldritchGolem.item=
     I:Thaumcraft.EldritchGolem.lexiconDisplaySize=40
     I:Thaumcraft.EldritchGolem.metadata=0
     I:Thaumcraft.EldritchGolem.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.EldritchGuardian
     S:Thaumcraft.EldritchGuardian.item=
     I:Thaumcraft.EldritchGuardian.lexiconDisplaySize=40
     I:Thaumcraft.EldritchGuardian.metadata=0
     I:Thaumcraft.EldritchGuardian.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.EldritchWarden
     S:Thaumcraft.EldritchWarden.item=
     I:Thaumcraft.EldritchWarden.lexiconDisplaySize=40
     I:Thaumcraft.EldritchWarden.metadata=0
     I:Thaumcraft.EldritchWarden.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.Firebat
     S:Thaumcraft.Firebat.item=
     I:Thaumcraft.Firebat.lexiconDisplaySize=40
     I:Thaumcraft.Firebat.metadata=0
     I:Thaumcraft.Firebat.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.GiantBrainyZombie
     S:Thaumcraft.GiantBrainyZombie.item=
     I:Thaumcraft.GiantBrainyZombie.lexiconDisplaySize=40
     I:Thaumcraft.GiantBrainyZombie.metadata=0
     I:Thaumcraft.GiantBrainyZombie.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.Golem
     S:Thaumcraft.Golem.item=
     I:Thaumcraft.Golem.lexiconDisplaySize=40
     I:Thaumcraft.Golem.metadata=0
     I:Thaumcraft.Golem.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.InhabitedZombie
     S:Thaumcraft.InhabitedZombie.item=
     I:Thaumcraft.InhabitedZombie.lexiconDisplaySize=40
     I:Thaumcraft.InhabitedZombie.metadata=0
     I:Thaumcraft.InhabitedZombie.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.MindSpider
     S:Thaumcraft.MindSpider.item=
     I:Thaumcraft.MindSpider.lexiconDisplaySize=40
     I:Thaumcraft.MindSpider.metadata=0
     I:Thaumcraft.MindSpider.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.Pech
     S:Thaumcraft.Pech.item=
     I:Thaumcraft.Pech.lexiconDisplaySize=40
     I:Thaumcraft.Pech.metadata=0
     I:Thaumcraft.Pech.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.TaintSpider
     S:Thaumcraft.TaintSpider.item=
     I:Thaumcraft.TaintSpider.lexiconDisplaySize=40
     I:Thaumcraft.TaintSpider.metadata=0
     I:Thaumcraft.TaintSpider.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.TaintSpore
     S:Thaumcraft.TaintSpore.item=
     I:Thaumcraft.TaintSpore.lexiconDisplaySize=40
     I:Thaumcraft.TaintSpore.metadata=0
     I:Thaumcraft.TaintSpore.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.TaintSwarm
     S:Thaumcraft.TaintSwarm.item=
     I:Thaumcraft.TaintSwarm.lexiconDisplaySize=40
     I:Thaumcraft.TaintSwarm.metadata=0
     I:Thaumcraft.TaintSwarm.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.TaintSwarmer
     S:Thaumcraft.TaintSwarmer.item=
     I:Thaumcraft.TaintSwarmer.lexiconDisplaySize=40
     I:Thaumcraft.TaintSwarmer.metadata=0
     I:Thaumcraft.TaintSwarmer.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.Taintacle
     S:Thaumcraft.Taintacle.item=
     I:Thaumcraft.Taintacle.lexiconDisplaySize=40
     I:Thaumcraft.Taintacle.metadata=0
     I:Thaumcraft.Taintacle.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.TaintacleGiant
     S:Thaumcraft.TaintacleGiant.item=
     I:Thaumcraft.TaintacleGiant.lexiconDisplaySize=40
     I:Thaumcraft.TaintacleGiant.metadata=0
     I:Thaumcraft.TaintacleGiant.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.TaintacleTiny
     S:Thaumcraft.TaintacleTiny.item=
     I:Thaumcraft.TaintacleTiny.lexiconDisplaySize=40
     I:Thaumcraft.TaintacleTiny.metadata=0
     I:Thaumcraft.TaintacleTiny.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.TaintedChicken
     S:Thaumcraft.TaintedChicken.item=
     I:Thaumcraft.TaintedChicken.lexiconDisplaySize=40
     I:Thaumcraft.TaintedChicken.metadata=0
     I:Thaumcraft.TaintedChicken.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.TaintedCow
     S:Thaumcraft.TaintedCow.item=
     I:Thaumcraft.TaintedCow.lexiconDisplaySize=40
     I:Thaumcraft.TaintedCow.metadata=0
     I:Thaumcraft.TaintedCow.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.TaintedCreeper
     S:Thaumcraft.TaintedCreeper.item=
     I:Thaumcraft.TaintedCreeper.lexiconDisplaySize=40
     I:Thaumcraft.TaintedCreeper.metadata=0
     I:Thaumcraft.TaintedCreeper.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.TaintedPig
     S:Thaumcraft.TaintedPig.item=
     I:Thaumcraft.TaintedPig.lexiconDisplaySize=40
     I:Thaumcraft.TaintedPig.metadata=0
     I:Thaumcraft.TaintedPig.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.TaintedSheep
     S:Thaumcraft.TaintedSheep.item=
     I:Thaumcraft.TaintedSheep.lexiconDisplaySize=40
     I:Thaumcraft.TaintedSheep.metadata=0
     I:Thaumcraft.TaintedSheep.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.TaintedVillager
     S:Thaumcraft.TaintedVillager.item=
     I:Thaumcraft.TaintedVillager.lexiconDisplaySize=40
     I:Thaumcraft.TaintedVillager.metadata=0
     I:Thaumcraft.TaintedVillager.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.ThaumSlime
     S:Thaumcraft.ThaumSlime.item=
     I:Thaumcraft.ThaumSlime.lexiconDisplaySize=40
     I:Thaumcraft.ThaumSlime.metadata=0
     I:Thaumcraft.ThaumSlime.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.TravelingTrunk
     S:Thaumcraft.TravelingTrunk.item=
     I:Thaumcraft.TravelingTrunk.lexiconDisplaySize=40
     I:Thaumcraft.TravelingTrunk.metadata=0
     I:Thaumcraft.TravelingTrunk.rate=-1
-
-    # Configuration of Shedding for Thaumcraft.Wisp
     S:Thaumcraft.Wisp.item=
     I:Thaumcraft.Wisp.lexiconDisplaySize=40
     I:Thaumcraft.Wisp.metadata=0
     I:Thaumcraft.Wisp.rate=-1
-
-    # Configuration of Shedding for ThaumicHorizons.ChocolateCow
     S:ThaumicHorizons.ChocolateCow.item=
     I:ThaumicHorizons.ChocolateCow.lexiconDisplaySize=40
     I:ThaumicHorizons.ChocolateCow.metadata=0
     I:ThaumicHorizons.ChocolateCow.rate=-1
-
-    # Configuration of Shedding for ThaumicHorizons.ChromaticSheep
     S:ThaumicHorizons.ChromaticSheep.item=
     I:ThaumicHorizons.ChromaticSheep.lexiconDisplaySize=40
     I:ThaumicHorizons.ChromaticSheep.metadata=0
     I:ThaumicHorizons.ChromaticSheep.rate=-1
-
-    # Configuration of Shedding for ThaumicHorizons.Familiar
     S:ThaumicHorizons.Familiar.item=
     I:ThaumicHorizons.Familiar.lexiconDisplaySize=40
     I:ThaumicHorizons.Familiar.metadata=0
     I:ThaumicHorizons.Familiar.rate=-1
-
-    # Configuration of Shedding for ThaumicHorizons.GoldChicken
     S:ThaumicHorizons.GoldChicken.item=
     I:ThaumicHorizons.GoldChicken.lexiconDisplaySize=40
     I:ThaumicHorizons.GoldChicken.metadata=0
     I:ThaumicHorizons.GoldChicken.rate=-1
-
-    # Configuration of Shedding for ThaumicHorizons.GolemTH
     S:ThaumicHorizons.GolemTH.item=
     I:ThaumicHorizons.GolemTH.lexiconDisplaySize=40
     I:ThaumicHorizons.GolemTH.metadata=0
     I:ThaumicHorizons.GolemTH.rate=-1
-
-    # Configuration of Shedding for ThaumicHorizons.Gravekeeper
     S:ThaumicHorizons.Gravekeeper.item=
     I:ThaumicHorizons.Gravekeeper.lexiconDisplaySize=40
     I:ThaumicHorizons.Gravekeeper.metadata=0
     I:ThaumicHorizons.Gravekeeper.rate=-1
-
-    # Configuration of Shedding for ThaumicHorizons.GuardianPanther
     S:ThaumicHorizons.GuardianPanther.item=
     I:ThaumicHorizons.GuardianPanther.lexiconDisplaySize=40
     I:ThaumicHorizons.GuardianPanther.metadata=0
     I:ThaumicHorizons.GuardianPanther.rate=-1
-
-    # Configuration of Shedding for ThaumicHorizons.LunarWolf
     S:ThaumicHorizons.LunarWolf.item=
     I:ThaumicHorizons.LunarWolf.lexiconDisplaySize=40
     I:ThaumicHorizons.LunarWolf.metadata=0
     I:ThaumicHorizons.LunarWolf.rate=-1
-
-    # Configuration of Shedding for ThaumicHorizons.NetherHound
     S:ThaumicHorizons.NetherHound.item=
     I:ThaumicHorizons.NetherHound.lexiconDisplaySize=40
     I:ThaumicHorizons.NetherHound.metadata=0
     I:ThaumicHorizons.NetherHound.rate=-1
-
-    # Configuration of Shedding for ThaumicHorizons.OrePig
     S:ThaumicHorizons.OrePig.item=
     I:ThaumicHorizons.OrePig.lexiconDisplaySize=40
     I:ThaumicHorizons.OrePig.metadata=0
     I:ThaumicHorizons.OrePig.rate=-1
-
-    # Configuration of Shedding for ThaumicHorizons.ScholarChicken
     S:ThaumicHorizons.ScholarChicken.item=
     I:ThaumicHorizons.ScholarChicken.lexiconDisplaySize=40
     I:ThaumicHorizons.ScholarChicken.metadata=0
     I:ThaumicHorizons.ScholarChicken.rate=-1
-
-    # Configuration of Shedding for ThaumicHorizons.Seawolf
     S:ThaumicHorizons.Seawolf.item=
     I:ThaumicHorizons.Seawolf.lexiconDisplaySize=40
     I:ThaumicHorizons.Seawolf.metadata=0
     I:ThaumicHorizons.Seawolf.rate=-1
-
-    # Configuration of Shedding for ThaumicHorizons.SelfShearingSheep
     S:ThaumicHorizons.SelfShearingSheep.item=
     I:ThaumicHorizons.SelfShearingSheep.lexiconDisplaySize=40
     I:ThaumicHorizons.SelfShearingSheep.metadata=0
     I:ThaumicHorizons.SelfShearingSheep.rate=-1
-
-    # Configuration of Shedding for ThaumicHorizons.TaintEaterPig
     S:ThaumicHorizons.TaintEaterPig.item=
     I:ThaumicHorizons.TaintEaterPig.lexiconDisplaySize=40
     I:ThaumicHorizons.TaintEaterPig.metadata=0
@@ -1137,6 +1095,12 @@ shedding {
     I:critterpet.Spider.lexiconDisplaySize=40
     I:critterpet.Spider.metadata=0
     I:critterpet.Spider.rate=-1
+
+    # Configuration of Shedding for ecru_EntityMomiji
+    S:ecru_EntityMomiji.item=
+    I:ecru_EntityMomiji.lexiconDisplaySize=40
+    I:ecru_EntityMomiji.metadata=0
+    I:ecru_EntityMomiji.rate=-1
 
     # Configuration of Shedding for fossil.Allosaurus
     S:fossil.Allosaurus.item=
