--- a/config/flammpfeil.slashblade.cfg
+++ b/config/flammpfeil.slashblade.cfg
@@ -7,12 +7,12 @@ general {
         "menagerie.rat:true"
         "TConstruct.Crystal:true"
         "CustomNpc:true"
-        "Thaumcraft.EldritchCrab:true"
         "EnderDragon:true"
+        "Thaumcraft.EldritchCrab:true"
         "witchery.imp:true"
         "SnowMan:false"
-        "witchery.lordoftorment:true"
         "witchery.familiar:false"
+        "witchery.lordoftorment:true"
         "witchery.cat:false"
         "IMImp:true"
         "fossil.Deinonychus:false"
@@ -24,8 +24,8 @@ general {
         "witchery.werevillager:false"
         "IMZombie:true"
         "fossil.Liopleurodon:true"
-        "BiomesOPlenty.Wasp:true"
         "Chicken:false"
+        "BiomesOPlenty.Wasp:true"
         "witchery.darkmark:true"
         "ChocoboPurple:false"
         "Thaumcraft.CultistLeader:true"
@@ -33,18 +33,19 @@ general {
         "fossil.Smilodon:false"
         "primitivemobs.HauntedTool:true"
         "witchery.illusionSpider:true"
-        "Thaumcraft.TaintedCreeper:true"
-        "fossil.Brachiosaurus:false"
         "fossil.FriendlyPigZombie:true"
+        "fossil.Brachiosaurus:false"
+        "Thaumcraft.TaintedCreeper:true"
         "witchery.babayaga:true"
         "Thaumcraft.CultistPortal:true"
         "witchery.spectre:true"
         "ThaumicHorizons.Gravekeeper:false"
         "ThaumicHorizons.ChocolateCow:false"
         "Thaumcraft.TaintedVillager:true"
+        "ecru_EntityMomiji:false"
+        "menagerie.oliphant:false"
         "BiomesOPlenty.JungleSpider:true"
         "Thaumcraft.TaintSwarmer:true"
-        "menagerie.oliphant:false"
         "Thaumcraft.InhabitedZombie:true"
         "Wolf:false"
         "witchery.witchhunter:true"
@@ -57,10 +58,10 @@ general {
         "fossil.Dodo:false"
         "IMEgg:true"
         "Slime:true"
+        "witchery.wolfman:true"
         "witchery.lostsoul:false"
         "betterstorage.Cluckington:false"
         "primitivemobs.SheepmanSmith:false"
-        "witchery.wolfman:true"
         "fossil.Gallimimus:false"
         "witchery.spirit:false"
         "BiomesOPlenty.Rosester:false"
@@ -99,8 +100,8 @@ general {
         "Skeleton:true"
         "witchery.demon:false"
         "Mob:true"
-        "fossil.Mosasaurus:true"
         "Ozelot:false"
+        "fossil.Mosasaurus:true"
         "primitivemobs.Summoner:true"
         "ThaumicHorizons.OrePig:false"
         "witchery.goblingulg:true"
@@ -112,27 +113,28 @@ general {
         "Thaumcraft.ThaumSlime:true"
         "ThaumicHorizons.ChromaticSheep:false"
         "fossil.Ankylosaurus:false"
-        "Spider:true"
         "NetherOres.netherOresHellfish:true"
+        "Spider:true"
         "Thaumcraft.TaintacleGiant:true"
         "fossil.Nautilus:false"
-        "fossil.Pachycephalosaurus:false"
         "ChocoboGold:false"
+        "fossil.Pachycephalosaurus:false"
         "witchery.deathhorse:false"
         "fossil.Mammoth:false"
         "Thaumcraft.GiantBrainyZombie:true"
         "imc.WildSheep:false"
         "Thaumcraft.TaintSpore:true"
-        "primitivemobs.BlazingJuggernaut:true"
         "BiomesOPlenty.Glob:true"
+        "primitivemobs.BlazingJuggernaut:true"
         "EntityHorse:false"
-        "npcnagamale:true"
         "fossil.Bones:true"
+        "npcnagamale:true"
         "Natura.NitroCreeper:true"
         "witchery.hornedHuntsman:true"
         "npczombiefemale:true"
         "fossil.Compsognathus:false"
         "Villager:false"
+        "BambooMod.Firefly:true"
         "fossil.Failuresaurus:true"
         "Botania.botania:doppleganger:true"
         "fossil.Quagga:false"
@@ -144,9 +146,9 @@ general {
         "primitivemobs.RocketCreeper:true"
         "quiverchevsky.quiverchevsky_turret:true"
         "fossil.Allosaurus:false"
-        "Thaumcraft.Firebat:true"
-        "npcfurryfemale:true"
         "npccrystal:true"
+        "npcfurryfemale:true"
+        "Thaumcraft.Firebat:true"
         "fossil.Coelacanth:false"
         "primitivemobs.Spider+:true"
         "CaveSpider:true"
@@ -158,6 +160,7 @@ general {
         "npcGolem:true"
         "witchery.goblinmog:true"
         "quivermobchevsky.quivermob_shooter:true"
+        "BuildCraft|Core.bcRobot:true"
         "ThaumicHorizons.GolemTH:false"
         "Monster:true"
         "witchery.banshee:true"
@@ -173,10 +176,11 @@ general {
         "Cow:false"
         "Blizz:true"
         "IMCreeper:true"
+        "BambooMod.TrueVillager:false"
         "IMWolf:false"
         "IMPigEngy:true"
-        "primitivemobs.BrainSlime:true"
         "Pig:false"
+        "primitivemobs.BrainSlime:true"
         "Thaumcraft.EldritchGuardian:true"
         "Thaumcraft.Pech:true"
         "witchery.ent:true"
@@ -200,8 +204,8 @@ general {
         "imc.WildCow:false"
         "menagerie.infestedVillager:true"
         "imc.WildPig:false"
-        "Thaumcraft.Wisp:true"
         "primitivemobs.TravelingMerchant:false"
+        "Thaumcraft.Wisp:true"
         "primitivemobs.MimicChest:true"
         "Zombie:true"
         "primitivemobs.GroveSprite:true"
@@ -219,15 +223,15 @@ general {
         "npchumanfemale:true"
         "witchery.toad:false"
         "fossil.Velociraptor:false"
-        "BiomesOPlenty.Bird:false"
-        "primitivemobs.LostMiner:false"
         "primitivemobs.Sheepman:false"
+        "primitivemobs.LostMiner:false"
+        "BiomesOPlenty.Bird:false"
         "Thaumcraft.TaintedPig:true"
         "Squid:false"
         "fossil.TRex:false"
         "Botania.botania:pixie:false"
-        "Thaumcraft.TravelingTrunk:false"
         "menagerie.manticore:true"
+        "Thaumcraft.TravelingTrunk:false"
         "npcpony:true"
         "MineFactoryReloaded.mfrEntityPinkSlime:true"
         "TConstruct.EdibleSlime:true"
@@ -235,16 +239,16 @@ general {
         "fossil.Pterosaur:false"
         "TConstruct.KingSlime:true"
         "menagerie.ghost:true"
-        "Thaumcraft.TaintedCow:true"
         "Natura.FlameSpiderBaby:true"
+        "Thaumcraft.TaintedCow:true"
         "menagerie.mummy:true"
-        "ThaumicHorizons.GoldChicken:false"
         "primitivemobs.OreGolem:true"
+        "ThaumicHorizons.GoldChicken:false"
         "Thaumcraft.EldritchGolem:true"
-        "witchery.illusionCreeper:true"
         "fossil.TerrorBird:false"
         "IMThrower:true"
         "primitivemobs.Chameleon:false"
+        "witchery.illusionCreeper:true"
         "Bat:false"
         "Thaumcraft.TaintSwarm:true"
         "Ghast:true"
@@ -263,23 +267,30 @@ general {
         "EntityCartAnchor:false"
         "PlaceableCocktailSP:false"
         "EntityCartAnchorPersonal:false"
+        "EntityThunderStorm:false"
         "EntityPermanentItem:false"
+        "EntityDummyChair:false"
+        "EntityWindmill:false"
         "EntityMelonBomb:false"
+        "EntityGravityHole:false"
         "EntityGolemBobber:false"
         "EntityBoltProjectile:false"
         "PlaceableBowl:false"
-        "EntityFallingBlock:false"
         "EntityItemFrame:false"
+        "EntityFallingBlock:false"
         "EntityRocket:false"
         "EntityMinecartTNT:false"
         "EntityIMBoulder:false"
         "EntitySpawnListFiller:false"
         "EntityMagicLandmine:false"
         "EntityItemGrate:false"
+        "EntityDummy:false"
         "EntityMinecartCommandBlock:false"
         "EntityIllusionMobs:false"
+        "EntityZabuton:false"
         "EntityLeashKnot:false"
         "PlaceableAlcoholCup:false"
+        "EntityWindChime:false"
         "EntityFollowingItem:false"
         "EntityAlchemitePrimed:false"
         "EntityMLighting:false"
@@ -302,22 +313,24 @@ general {
         "EntityMinecartHopper:false"
         "EntityCarpentersTile:false"
         "EntityThrownItem:false"
+        "EntityWaterwheel:false"
         "EntityCartTank:false"
         "PlaceableCup2:false"
         "EntityFireworkRocket:false"
         "PlaceableCup1:false"
         "EntityKinoko:false"
         "EntitySplatter:false"
-        "EntityXPOrbSuppressFollow:false"
         "EntityBlock:false"
+        "EntityXPOrbSuppressFollow:false"
         "PlaceableCocktail2:false"
         "EntityArmedOre:false"
         "EntityFallingTaint:false"
         "EntityCartUndercutter:false"
         "EntityPeacefulTNTPrimed:false"
         "DebugTracker:false"
-        "EntityObsidianBoat:false"
         "EntityBoat:false"
+        "EntityObsidianBoat:false"
+        "EntityClock:false"
         "EntityMinecartFurnace:false"
         "EntityGoldenEye:false"
         "EntityMacht:false"
@@ -326,21 +339,26 @@ general {
         "EntityBladeStand:false"
         "EntityDroplet:false"
         "PlaceableSandwich:false"
+        "EntityShield:false"
         "EntityCartGift:false"
         "EntityCartBasic:false"
         "EntityCartTrackRemover:false"
         "EntityItemWaystone:false"
         "EntitySingularity:false"
         "EntityLocomotiveSteamSolid:false"
+        "EntityFlareEffect:false"
         "EntityCorporeaSpark:false"
         "PlaceableTart:false"
         "EntitySpark:false"
         "EntityMinecartEmpty:false"
         "PlaceableSteak:false"
+        "EntityKakeziku:false"
         "EntityLocomotiveElectric:false"
+        "EntityItemMarker:false"
         "EntityBrew:false"
         "EntityMinecartChest:false"
         "EntityStoneboard:false"
+        "EntitySlideDoor:false"
         "EntityTunnelBore:false"
         "EntityBroom:false"
         "EntityLandmineFirework:false"
@@ -349,8 +367,8 @@ general {
         "EntityMinecartMobSpawner:false"
         "ExplosivePrimed:false"
         "PlaceableCocktail:false"
-        "EntityItemProjectile:false"
         "EntitySilkyMelon:false"
+        "EntityItemProjectile:false"
         "EntityItem:false"
         "EntityAspectOrb:false"
         "EntityCartographer:false"
@@ -363,6 +381,7 @@ general {
         "EntitySpellEffect:false"
         "EntitySpecialItem:false"
         "PlayerBound:false"
+        "EntityObon:false"
         "EntityXPOrb:false"
      >
     S:RankDownIgnoreDamageTypes <
@@ -371,14 +390,9 @@ general {
 
 
 rustblade {
-    # under 0 : no drop , 0.0<droprate<1.0
     D:DirectDropChance=-1.0
-
-    # 0:nodrop , 0<droprate<1 , 2:forceDrop
     D:DropRate=0.20000000298023224
     D:IsBrokenRate=0.699999988079071
-
-    # 0.0<rate<1
     D:NoSheathRate=0.8999999761581421
     D:SpawnRate=0.05000000074505806
 }
