Reworked some recipes.

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -6,6 +6,50 @@ ae2stuff {
 }
 
 
+agricraft {
+    B:channelValve=false
+    B:cropAllium=false
+    B:cropBotaniaBlack=false
+    B:cropBotaniaBlue=false
+    B:cropBotaniaBrown=false
+    B:cropBotaniaCyan=false
+    B:cropBotaniaGray=false
+    B:cropBotaniaGreen=false
+    B:cropBotaniaLightBlue=false
+    B:cropBotaniaLightGray=false
+    B:cropBotaniaLime=false
+    B:cropBotaniaMagenta=false
+    B:cropBotaniaOrange=false
+    B:cropBotaniaPink=false
+    B:cropBotaniaPurple=false
+    B:cropBotaniaRed=false
+    B:cropBotaniaWhite=false
+    B:cropBotaniaYellow=false
+    B:cropCactus=false
+    B:cropCarrot=false
+    B:cropDaisy=false
+    B:cropDandelion=false
+    B:cropMelon=false
+    B:cropOrchid=false
+    B:cropPoppy=false
+    B:cropPotato=false
+    B:cropPumpkin=false
+    B:cropShroomBrown=false
+    B:cropShroomRed=false
+    B:cropSugarcane=false
+    B:cropTulipOrange=false
+    B:cropTulipPink=false
+    B:cropTulipRed=false
+    B:cropTulipWhite=false
+    B:crops=false
+    B:seedAnalyzer=false
+    B:sprinkler=false
+    B:waterChannel=false
+    B:waterChannel.1=false
+    B:waterTank=false
+}
+
+
 appliedenergistics2 {
     B:tileBlockCellWorkbench=false
     B:tileBlockCharger=false
@@ -422,6 +466,142 @@ automagy {
     B:blockTranslucent.1=false
     B:blockUnseenScribe=false
     B:blockVisReader=false
+}
+
+
+bamboomod {
+    B:alphamultiblock=false
+    B:andon=false
+    B:bamboo=false
+    B:bamboo2=false
+    B:bambooLiangThick=false
+    B:bambooLiangThin=false
+    B:bambooLiangVLog2Thick=false
+    B:bambooLiangVLog2Thick.1=false
+    B:bambooLiangVLog2Thin=false
+    B:bambooLiangVLog2Thin.1=false
+    B:bambooLiangVLogThick=false
+    B:bambooLiangVLogThick.1=false
+    B:bambooLiangVLogThick.2=false
+    B:bambooLiangVLogThick.3=false
+    B:bambooLiangVLogThin=false
+    B:bambooLiangVLogThin.1=false
+    B:bambooLiangVLogThin.2=false
+    B:bambooLiangVLogThin.3=false
+    B:bambooLiangVWoodThick=false
+    B:bambooLiangVWoodThick.1=false
+    B:bambooLiangVWoodThick.2=false
+    B:bambooLiangVWoodThick.3=false
+    B:bambooLiangVWoodThick.4=false
+    B:bambooLiangVWoodThick.5=false
+    B:bambooLiangVWoodThin=false
+    B:bambooLiangVWoodThin.1=false
+    B:bambooLiangVWoodThin.2=false
+    B:bambooLiangVWoodThin.3=false
+    B:bambooLiangVWoodThin.4=false
+    B:bambooLiangVWoodThin.5=false
+    B:bambooMillStone=false
+    B:bambooMoss=false
+    B:bambooMultiPot=false
+    B:bambooPanel=false
+    B:bambooPanel.1=false
+    B:bambooPanel.2=false
+    B:bambooPanel.3=false
+    B:bambooPanel.4=false
+    B:bambooPanel.5=false
+    B:bambooPanel.6=false
+    B:bamboohuton=false
+    B:bamboomultiblock=false
+    B:bamboosingle=false
+    B:beanPlant=false
+    B:blobkbroom=true
+    B:blobkbroom.1=true
+    B:blockbambooshoot=false
+    B:campfire=false
+    B:crossLamp=false
+    B:crossLamp.1=false
+    B:deco=true
+    B:deco.1=true
+    B:deco.2=true
+    B:deco.3=true
+    B:deco.4=true
+    B:deco.5=true
+    B:decoCarpet=false
+    B:decoCarpet.2=false
+    B:decoCarpet.4=false
+    B:decoCarpet.6=false
+    B:decoCarpet.8=false
+    B:decoCurvePlaster=true
+    B:decoDCurvePlaster=true
+    B:decoPlaster=true
+    B:deludeheight=false
+    B:deludeplate=false
+    B:deludestair=false
+    B:deludewidth=false
+    B:dirSquare=false
+    B:dirSquare.10=false
+    B:dirSquare.12=false
+    B:dirSquare.4=false
+    B:dirSquare.8=false
+    B:halfDeco=false
+    B:halfDeco.1=false
+    B:halfDeco.2=false
+    B:halfDeco.3=false
+    B:halfDeco.4=false
+    B:halfDeco.5=false
+    B:halfDirSquare=false
+    B:halfDirSquare.10=false
+    B:halfDirSquare.12=false
+    B:halfDirSquare.4=false
+    B:halfDirSquare.8=false
+    B:halfTwoDirDeco=false
+    B:halfTwoDirDeco.2=false
+    B:halfTwoDirDeco.4=false
+    B:jpChest=false
+    B:kawarastair=false
+    B:kayabukiRoof=false
+    B:kitunebi=false
+    B:maneki=false
+    B:ricePlant=false
+    B:sakuraLeaves=false
+    B:sakuraLeaves.1=false
+    B:sakuraLeaves.10=false
+    B:sakuraLeaves.11=false
+    B:sakuraLeaves.12=false
+    B:sakuraLeaves.13=false
+    B:sakuraLeaves.14=false
+    B:sakuraLeaves.15=false
+    B:sakuraLeaves.2=false
+    B:sakuraLeaves.3=false
+    B:sakuraLeaves.4=false
+    B:sakuraLeaves.5=false
+    B:sakuraLeaves.6=false
+    B:sakuraLeaves.7=false
+    B:sakuraLeaves.8=false
+    B:sakuraLeaves.9=false
+    B:sakuraLog=true
+    B:sakuraSapling=false
+    B:sakuracarpet=false
+    B:sakuracarpet.1=false
+    B:sakuracarpet.2=false
+    B:seaweed=false
+    B:singleTexDeco=false
+    B:spaUnit=false
+    B:spaWater=false
+    B:thickBirchPillar=false
+    B:thickOrcPillar=false
+    B:thickSakuraPillar=false
+    B:thickSprucePillar=false
+    B:thinBirchPillar=false
+    B:thinOrcPillar=false
+    B:thinSakuraPillar=false
+    B:thinSprucePillar=false
+    B:tomatoPlant=false
+    B:twoDirDeco=true
+    B:twoDirDeco.2=true
+    B:twoDirDeco.4=true
+    B:villagerBlock=false
+    B:warastair=false
 }
 
 
@@ -2760,6 +2940,29 @@ expandedredstone {
 }
 
 
+factorization {
+    B:BlastedBedrock=true
+    B:ColossalBlock=true
+    B:ColossalBlock.1=true
+    B:ColossalBlock.2=true
+    B:ColossalBlock.3=true
+    B:ColossalBlock.4=true
+    B:ColossalBlock.5=true
+    B:ColossalBlock.6=false
+    B:ColossalBlock.7=true
+    B:ColossalBlock.9=true
+    B:DarkIronOre=false
+    B:FracturedBedrock=true
+    B:FzBlock.15=false
+    B:GargantuanBlock=true
+    B:Lightair=false
+    B:ResourceBlock=true
+    B:ResourceBlock.1=true
+    B:ResourceBlock.2=true
+    B:ResourceBlock.3=true
+}
+
+
 fluxedtrinkets {
     B:HeatGenerator=false
     B:KineticGenerator=false
@@ -3129,6 +3332,7 @@ magitek {
 minecraft {
     B:acaciastairs=false
     B:activatorrail=false
+    B:air=false
     B:anvil=false
     B:anvil.4=false
     B:anvil.8=false
@@ -3476,6 +3680,180 @@ minefactoryreloaded {
     B:stone=false
     B:tank=false
     B:vinescaffold=false
+}
+
+
+modecrumapletree {
+    B:ecruBlockBiofuelPD=false
+    B:ecruBlockBiofuelPD.1=false
+    B:ecruBlockBiofuelPD.2=false
+    B:ecruBlockBiofuelPD.3=false
+    B:ecruBlockCauldron=false
+    B:ecruBlockChestnutsBurrs.4=false
+    B:ecruBlockCookPot=false
+    B:ecruBlockCropsAzuki=false
+    B:ecruBlockCropsCabbage.7=false
+    B:ecruBlockCropsRapeseed=false
+    B:ecruBlockCropsStickyRice=false
+    B:ecruBlockEngine=false
+    B:ecruBlockFallenLeaves=false
+    B:ecruBlockFallenLeaves.1=false
+    B:ecruBlockFallenLeaves.2=false
+    B:ecruBlockFallenLeaves.3=false
+    B:ecruBlockFallenLeavesFire=false
+    B:ecruBlockFallenLeavesFire.1=false
+    B:ecruBlockFallenLeavesFire.2=false
+    B:ecruBlockFallenLeavesFire.3=false
+    B:ecruBlockFountain=false
+    B:ecruBlockFountain.1=false
+    B:ecruBlockFountain.2=false
+    B:ecruBlockFountain.3=false
+    B:ecruBlockFountain.4=false
+    B:ecruBlockFountain.5=false
+    B:ecruBlockFountain.6=false
+    B:ecruBlockGrainHopper=false
+    B:ecruBlockGrapeTub=false
+    B:ecruBlockGrapeTub.9=false
+    B:ecruBlockHumanPowerDrive=false
+    B:ecruBlockLeafFence=false
+    B:ecruBlockLeafFence.1=false
+    B:ecruBlockLeafFence.2=false
+    B:ecruBlockLeafFence.3=false
+    B:ecruBlockLighthouseIllumination=false
+    B:ecruBlockMapleLeaves=false
+    B:ecruBlockMapleLeaves.1=false
+    B:ecruBlockMapleLeaves.2=false
+    B:ecruBlockMapleLeaves.3=false
+    B:ecruBlockMapleSapling=false
+    B:ecruBlockMapleSapling.1=false
+    B:ecruBlockMapleSapling.2=false
+    B:ecruBlockMapleSapling.3=false
+    B:ecruBlockMapleWood=true
+    B:ecruBlockMapleWoodSyrup.2=false
+    B:ecruBlockMiniStairs0=false
+    B:ecruBlockMiniStairs1=false
+    B:ecruBlockMiniStairs2=false
+    B:ecruBlockMiniStairs3=false
+    B:ecruBlockOreBlobk=true
+    B:ecruBlockOreBlobk.1=true
+    B:ecruBlockOreBlobk.2=true
+    B:ecruBlockOreFlower=false
+    B:ecruBlockOreFlower.1=false
+    B:ecruBlockOreFlower.2=false
+    B:ecruBlockOreFlower.3=false
+    B:ecruBlockOreFlower.4=false
+    B:ecruBlockOreFlower.5=false
+    B:ecruBlockOreFlower.6=false
+    B:ecruBlockOreFlower.7=false
+    B:ecruBlockOreFlowerGold=false
+    B:ecruBlockOreFlowerGold.1=false
+    B:ecruBlockOreFlowerGold.2=false
+    B:ecruBlockOreFlowerGold.3=false
+    B:ecruBlockOreFlowerGold.4=false
+    B:ecruBlockOreFlowerGold.5=false
+    B:ecruBlockOreFlowerGold.6=false
+    B:ecruBlockOreFlowerGold.7=false
+    B:ecruBlockOreFlowerIron=false
+    B:ecruBlockOreFlowerIron.1=false
+    B:ecruBlockOreFlowerIron.2=false
+    B:ecruBlockOreFlowerIron.3=false
+    B:ecruBlockOreFlowerIron.4=false
+    B:ecruBlockOreFlowerIron.5=false
+    B:ecruBlockOreFlowerIron.6=false
+    B:ecruBlockOreFlowerIron.7=false
+    B:ecruBlockPepper=false
+    B:ecruBlockPetal=false
+    B:ecruBlockPetal.1=false
+    B:ecruBlockPetal.2=false
+    B:ecruBlockPetal.3=false
+    B:ecruBlockPetal.4=false
+    B:ecruBlockPetal.5=false
+    B:ecruBlockPlanter=false
+    B:ecruBlockPowerShaft=false
+    B:ecruBlockPowerShaftGear=false
+    B:ecruBlockSLight=false
+    B:ecruBlockSLight.4=false
+    B:ecruBlockSLight2=false
+    B:ecruBlockSLight2.1=false
+    B:ecruBlockSpice=true
+    B:ecruBlockSpice.1=true
+    B:ecruBlockSpice.2=true
+    B:ecruBlockSpile=false
+    B:ecruBlockSprinkler=false
+    B:ecruBlockSprinkler.1=false
+    B:ecruBlockSprinkler.2=false
+    B:ecruBlockSprinkler.3=false
+    B:ecruBlockStoneMortar=false
+    B:ecruBlockSunFlower=false
+    B:ecruBlockSunFlower.1=false
+    B:ecruBlockSunFlower.2=false
+    B:ecruBlockSunFlower.3=false
+    B:ecruBlockWhiteFence=false
+    B:ecruBlockWhiteFence.8=false
+    B:ecruBlockWineBarrel=false
+    B:ecruBlockWineFaucet=false
+    B:ecruItemDecoration1=false
+    B:ecruItemDecoration1.1=false
+    B:ecruItemDecoration1.2=false
+    B:ecruItemDecoration1.3=false
+    B:ecruItemDecoration1.4=false
+    B:ecruItemDecoration1.5=false
+    B:ecruItemDecoration1.6=false
+    B:ecruItemDecoration1.7=false
+    B:ecruItemDecoration2=false
+    B:ecruItemDecoration2.1=false
+    B:ecruItemDecoration2.2=false
+    B:ecruItemDecoration2.3=false
+    B:ecruItemDecoration2.4=false
+    B:ecruItemDecoration2.5=false
+    B:ecruItemDecoration2.6=false
+    B:ecruItemDecoration2.7=false
+    B:ecruItemDecoration3=false
+    B:ecruItemDecoration3.1=false
+    B:ecruItemDecoration3.2=false
+    B:ecruItemDecoration3.3=false
+    B:ecruItemDecoration3.4=false
+    B:ecruItemDecoration3.5=false
+    B:ecruItemDecoration3.6=false
+    B:ecruItemDecoration3.7=false
+    B:ecruItemGrapePergola=false
+    B:ecruItemGrapePergola.8=false
+    B:ecruItemMarbleJewel0class=false
+    B:ecruItemMarbleJewel0class.1=false
+    B:ecruItemMarbleJewel0class.2=false
+    B:ecruItemMarbleJewel0class.3=false
+    B:ecruItemMarbleJewel1class=false
+    B:ecruItemMarbleJewel1class.1=false
+    B:ecruItemMarbleJewel1class.2=false
+    B:ecruItemMarbleJewel1class.3=false
+    B:ecruItemMarbleJewel2class=false
+    B:ecruItemMarbleJewel2class.1=false
+    B:ecruItemMarbleJewel2class.2=false
+    B:ecruItemMarbleJewel2class.3=false
+    B:ecruItemMarbleJewel3class=false
+    B:ecruItemMarbleJewel3class.1=false
+    B:ecruItemMarbleJewel3class.2=false
+    B:ecruItemMarbleJewel3class.3=false
+    B:ecruItemMarbleJewel4class=false
+    B:ecruItemMarbleJewel4class.1=false
+    B:ecruItemMarbleJewel4class.2=false
+    B:ecruItemMarbleJewel4class.3=false
+    B:ecruItemMarbleJewel5class=false
+    B:ecruItemMarbleJewel5class.1=false
+    B:ecruItemMarbleJewel5class.2=false
+    B:ecruItemMarbleJewel5class.3=false
+    B:ecruItemMarbleJewel6class=false
+    B:ecruItemMarbleJewel6class.1=false
+    B:ecruItemMarbleJewel6class.2=false
+    B:ecruItemMarbleJewel6class.3=false
+    B:ecruItemMarbleJewel7class=false
+    B:ecruItemMarbleJewel7class.1=false
+    B:ecruItemMarbleJewel7class.2=false
+    B:ecruItemMarbleJewel7class.3=false
+    B:ecruItemMarbleclass=true
+    B:ecruItemMarbleclass.1=true
+    B:ecruItemVanilla=false
+    B:ecruItemVanilla.8=false
 }
 
 
@@ -4190,6 +4568,11 @@ rftools {
     B:storageScannerBlock=false
     B:teleportBeamBlock=false
     B:timerBlock=false
+}
+
+
+routerreborn {
+    B:router=false
 }
 
 
