--- a/config/aobd.cfg
+++ b/config/aobd.cfg
@@ -111,6 +111,31 @@ Custom {
 }
 
 
+FzDarkIron {
+    B:"Disable All"=false
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    S:"In game name"=Dark Iron
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:TConstruct=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:UltraTech=true
+    B:appliedenergistics2=true
+    S:colour=0x3f0076
+    D:energy=3.0
+    S:extra=Silver
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+    B:simpleoregrinder=true
+}
+
+
 Gold {
     B:"Disable All"=false
     B:EnderIO=true
