--- a/config/flammpfeil.slashblade.cfg
+++ b/config/flammpfeil.slashblade.cfg
@@ -12,10 +12,10 @@ general {
         "witchery.imp:true"
         "SnowMan:false"
         "witchery.lordoftorment:true"
-        "witchery.familiar:false"
         "witchery.cat:false"
-        "fossil.Deinonychus:false"
+        "witchery.familiar:false"
         "IMImp:true"
+        "fossil.Deinonychus:false"
         "ThaumicHorizons.NetherHound:false"
         "Thaumcraft.TaintacleTiny:true"
         "Thaumcraft.CultistCleric:true"
@@ -24,8 +24,8 @@ general {
         "IMZombie:true"
         "witchery.werevillager:false"
         "fossil.Liopleurodon:true"
-        "BiomesOPlenty.Wasp:true"
         "Chicken:false"
+        "BiomesOPlenty.Wasp:true"
         "witchery.darkmark:true"
         "ChocoboPurple:false"
         "Thaumcraft.CultistLeader:true"
@@ -58,10 +58,10 @@ general {
         "fossil.Dodo:false"
         "IMEgg:true"
         "Slime:true"
-        "primitivemobs.SheepmanSmith:false"
         "betterstorage.Cluckington:false"
-        "witchery.wolfman:true"
         "witchery.lostsoul:false"
+        "primitivemobs.SheepmanSmith:false"
+        "witchery.wolfman:true"
         "fossil.Gallimimus:false"
         "witchery.spirit:false"
         "BiomesOPlenty.Rosester:false"
@@ -84,11 +84,11 @@ general {
         "npcorcfmale:true"
         "Enderman:true"
         "npchumanmale:true"
-        "npcelffemale:true"
         "lmmx.LittleMaidX:false"
+        "npcelffemale:true"
         "ChocoboBlack:false"
-        "BiomesOPlenty.Pixie:false"
         "Silverfish:true"
+        "BiomesOPlenty.Pixie:false"
         "fossil.Elasmotherium:false"
         "ChocoboYellow:false"
         "menagerie.ant:true"
@@ -100,8 +100,8 @@ general {
         "Skeleton:true"
         "witchery.demon:false"
         "Mob:true"
-        "Ozelot:false"
         "fossil.Mosasaurus:true"
+        "Ozelot:false"
         "primitivemobs.Summoner:true"
         "ThaumicHorizons.OrePig:false"
         "witchery.goblingulg:true"
@@ -117,8 +117,8 @@ general {
         "Spider:true"
         "Thaumcraft.TaintacleGiant:true"
         "fossil.Nautilus:false"
-        "fossil.Pachycephalosaurus:false"
         "ChocoboGold:false"
+        "fossil.Pachycephalosaurus:false"
         "witchery.deathhorse:false"
         "fossil.Mammoth:false"
         "Thaumcraft.GiantBrainyZombie:true"
@@ -127,18 +127,18 @@ general {
         "BiomesOPlenty.Glob:true"
         "primitivemobs.BlazingJuggernaut:true"
         "EntityHorse:false"
-        "npcnagamale:true"
         "fossil.Bones:true"
+        "npcnagamale:true"
         "witchery.hornedHuntsman:true"
         "Natura.NitroCreeper:true"
         "npczombiefemale:true"
         "fossil.Compsognathus:false"
         "Villager:false"
         "BambooMod.Firefly:true"
-        "Botania.botania:doppleganger:true"
         "fossil.Failuresaurus:true"
-        "fossil.Quagga:false"
+        "Botania.botania:doppleganger:true"
         "menagerie.lepus:true"
+        "fossil.Quagga:false"
         "MushroomCow:false"
         "primitivemobs.FilchLizard:true"
         "ThaumicHorizons.Familiar:false"
@@ -162,8 +162,8 @@ general {
         "quivermobchevsky.quivermob_shooter:true"
         "BuildCraft|Core.bcRobot:true"
         "ThaumicHorizons.GolemTH:false"
-        "Monster:true"
         "witchery.banshee:true"
+        "Monster:true"
         "IMSpider:true"
         "Witch:true"
         "primitivemobs.Lily:true"
@@ -178,15 +178,15 @@ general {
         "IMCreeper:true"
         "BambooMod.TrueVillager:false"
         "IMWolf:false"
-        "IMPigEngy:true"
         "Pig:false"
+        "IMPigEngy:true"
         "primitivemobs.BrainSlime:true"
         "Thaumcraft.EldritchGuardian:true"
         "Thaumcraft.Pech:true"
         "witchery.ent:true"
         "fossil.Spinosaurus:false"
-        "Blaze:true"
         "WitherBoss:true"
+        "Blaze:true"
         "Thaumcraft.TaintedSheep:true"
         "primitivemobs.SkeletonWarrior:true"
         "ChocoboWhite:false"
@@ -200,8 +200,8 @@ general {
         "Chicobo:false"
         "npcskeleton:true"
         "primitivemobs.TreasureSlime:true"
-        "imc.WildCow:false"
         "ChocoboPink:false"
+        "imc.WildCow:false"
         "menagerie.infestedVillager:true"
         "imc.WildPig:false"
         "primitivemobs.TravelingMerchant:false"
@@ -246,9 +246,9 @@ general {
         "ThaumicHorizons.GoldChicken:false"
         "Thaumcraft.EldritchGolem:true"
         "fossil.TerrorBird:false"
+        "IMThrower:true"
         "primitivemobs.Chameleon:false"
         "witchery.illusionCreeper:true"
-        "IMThrower:true"
         "Bat:false"
         "Thaumcraft.TaintSwarm:true"
         "Ghast:true"
@@ -261,9 +261,9 @@ general {
         "EntityCartTrackRelayer:false"
         "EntityChargedQuartz:false"
         "EntityCartTNTWood:false"
-        "EntityCartPumpkin:false"
-        "Drone:false"
         "EntityMagnet:false"
+        "Drone:false"
+        "EntityCartPumpkin:false"
         "EntityCartAnchor:false"
         "PlaceableCocktailSP:false"
         "EntityCartAnchorPersonal:false"
@@ -276,8 +276,8 @@ general {
         "EntityGolemBobber:false"
         "EntityBoltProjectile:false"
         "PlaceableBowl:false"
-        "EntityItemFrame:false"
         "EntityFallingBlock:false"
+        "EntityItemFrame:false"
         "EntityRocket:false"
         "EntityMinecartTNT:false"
         "EntityIMBoulder:false"
@@ -288,8 +288,8 @@ general {
         "EntityMinecartCommandBlock:false"
         "EntityIllusionMobs:false"
         "EntityZabuton:false"
-        "PlaceableAlcoholCup:false"
         "EntityLeashKnot:false"
+        "PlaceableAlcoholCup:false"
         "EntityWindChime:false"
         "EntityFollowingItem:false"
         "EntityAlchemitePrimed:false"
@@ -313,13 +313,13 @@ general {
         "EntityMinecartHopper:false"
         "EntityCarpentersTile:false"
         "EntityThrownItem:false"
-        "EntityWaterwheel:false"
         "EntityCartTank:false"
+        "EntityWaterwheel:false"
         "PlaceableCup2:false"
         "EntityFireworkRocket:false"
         "PlaceableCup1:false"
-        "EntityKinoko:false"
         "EntitySplatter:false"
+        "EntityKinoko:false"
         "EntityBlock:false"
         "EntityXPOrbSuppressFollow:false"
         "PlaceableCocktail2:false"
@@ -334,6 +334,7 @@ general {
         "EntityMinecartFurnace:false"
         "EntityGoldenEye:false"
         "EntityMacht:false"
+        "DimensionSliceEntity:false"
         "FancyEntityItem:false"
         "EntityChairMount:false"
         "EntityBladeStand:false"
@@ -341,34 +342,36 @@ general {
         "PlaceableSandwich:false"
         "EntityShield:false"
         "EntityCartGift:false"
-        "EntityCartBasic:false"
         "EntityCartTrackRemover:false"
+        "EntityCartBasic:false"
         "EntityItemWaystone:false"
         "EntitySingularity:false"
         "EntityLocomotiveSteamSolid:false"
         "EntityFlareEffect:false"
+        "ColossusController:false"
         "EntityCorporeaSpark:false"
         "EntitySpark:false"
         "PlaceableTart:false"
         "EntityMinecartEmpty:false"
         "PlaceableSteak:false"
-        "EntityLocomotiveElectric:false"
         "EntityItemMarker:false"
         "EntityKakeziku:false"
+        "EntityLocomotiveElectric:false"
         "EntityBrew:false"
         "EntityMinecartChest:false"
         "EntityStoneboard:false"
         "EntitySlideDoor:false"
         "EntityTunnelBore:false"
         "EntityBroom:false"
+        "RelightTask:false"
         "EntityLandmineFirework:false"
         "EntityIMBolt:false"
-        "EntityPoisonSpines:false"
         "EntityMinecartMobSpawner:false"
-        "PlaceableCocktail:false"
+        "EntityPoisonSpines:false"
         "ExplosivePrimed:false"
-        "EntitySilkyMelon:false"
+        "PlaceableCocktail:false"
         "EntityItemProjectile:false"
+        "EntitySilkyMelon:false"
         "EntityItem:false"
         "EntityAspectOrb:false"
         "EntityCartographer:false"
@@ -378,11 +381,12 @@ general {
         "EntityItemFireproof:false"
         "EntityStunEffect:false"
         "EntityDinoEgg:false"
+        "ServoMotor:false"
         "EntitySpellEffect:false"
         "EntitySpecialItem:false"
         "PlayerBound:false"
-        "EntityObon:false"
         "EntityXPOrb:false"
+        "EntityObon:false"
      >
     S:RankDownIgnoreDamageTypes <
      >
