--- a/config/Treecapitator.cfg
+++ b/config/Treecapitator.cfg
@@ -245,15 +245,6 @@ tree_and_mod_configs {
 
     }
 
-    tconstruct {
-        M:modID=TConstruct
-        S:axeIDList=TConstruct:hatchet; TConstruct:mattock; TConstruct:lumberaxe
-        S:shearsIDList=
-
-        # This setting controls whether or not the mod config section it appears in will override an IMC message sent by that mod. [default: false]
-        B:overrideIMC=false
-    }
-
     thaumcraft {
         S:axeIDList=Thaumcraft:ItemAxeThaumium; Thaumcraft:ItemAxeElemental
         M:modID=Thaumcraft
@@ -399,6 +390,24 @@ tree_and_mod_configs {
             S:leaves=minecraft:leaves, 1 % 8
         }
 
+    }
+
+    tconstruct {
+        M:modID=TConstruct
+        S:axeIDList=TConstruct:hatchet; TConstruct:mattock; TConstruct:lumberaxe
+        S:shearsIDList=
+
+        # This setting controls whether or not the mod config section it appears in will override an IMC message sent by that mod. [default: false]
+        B:overrideIMC=false
+    }
+
+    botania {
+        M:modID=Botania
+        S:axeIDList=Botania:manasteelAxe
+        S:shearsIDList=
+
+        # This setting controls whether or not the mod config section it appears in will override an IMC message sent by that mod. [default: false]
+        B:overrideIMC=false
     }
 
     imc {
