--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -2898,6 +2898,11 @@ denseores {
     B:block1.8=true
     B:block1.9=true
     B:block2=true
+    B:block2.1=true
+    B:block2.2=true
+    B:block2.3=true
+    B:block2.4=true
+    B:block2.5=true
 }
 
 
