--- a/config/Artifice.cfg
+++ b/config/Artifice.cfg
@@ -96,8 +96,8 @@ general {
 
 
 "plant generation" {
-    B:"Generate Flowers"=true
-    B:"Generate Lotus Lilies"=true
+    B:"Generate Flowers"=false
+    B:"Generate Lotus Lilies"=false
     I:"Percentage Flower Frequency"=100
     I:"Percentage Lotus Lily Frequency"=100
 }
