--- a/config/denseores.cfg
+++ b/config/denseores.cfg
@@ -332,6 +332,58 @@ ores {
         S:underlyingBlock=stone
     }
 
+    block_33 {
+        S:baseBlock=appliedenergistics2:tile.OreQuartz
+        I:baseBlockMeta=0
+        S:baseBlockTexture=appliedenergistics2:OreQuartz
+        D:denseOreProbability=1
+        I:renderType=1
+        I:retroGenID=1
+        S:underlyingBlock=stone
+    }
+
+    block_34 {
+        S:baseBlock=appliedenergistics2:tile.OreQuartzCharged
+        I:baseBlockMeta=0
+        S:baseBlockTexture=appliedenergistics2:OreQuartzCharged
+        D:denseOreProbability=1
+        I:renderType=1
+        I:retroGenID=1
+        S:underlyingBlock=stone
+    }
+
+    block_35 {
+        S:baseBlock=BigReactors:YelloriteOre
+        I:baseBlockMeta=0
+        S:baseBlockTexture=bigreactors:oreYellorite
+        D:denseOreProbability=1
+        I:renderType=0
+        I:retroGenID=3
+        S:underlyingBlock=stone
+    }
+
+    block_36 {
+        S:baseBlock=fossil:amberOre
+        I:baseBlockMeta=0
+        S:baseBlockTexture=fossil:Amber_Ore
+        D:denseOreProbability=1
+        I:renderType=0
+        I:retroGenID=0
+        I:retroGenId=0
+        S:underlyingBlock=stone
+    }
+
+    block_37 {
+        S:baseBlock=fossil:fossil
+        I:baseBlockMeta=0
+        S:baseBlockTexture=fossil:Fossil
+        D:denseOreProbability=1
+        I:renderType=0
+        I:retroGenID=0
+        I:retroGenId=0
+        S:underlyingBlock=stone
+    }
+
 }
 
 
