--- a/config/cofh/thermalexpansion/common.cfg
+++ b/config/cofh/thermalexpansion/common.cfg
@@ -81,6 +81,8 @@ Device {
 
     Breaker {
         B:Recipe.Enable=true
+
+        # If enabled, The Block Breaker will require a Diamond Pickaxe instead of an Invar Pickaxe.
         B:Recipe.RequireDiamondPickaxe=false
     }
 
@@ -148,11 +150,14 @@ General {
     B:PneumaticServo.AllowInvar=false
     B:PneumaticServo.AllowSilver=false
     B:PneumaticServo.AllowSteel=false
+
+    # If enabled, ingots are used instead of gears in many default recipes.
     B:UseIngots=false
 }
 
 
 Holiday {
+    # Set this to true to disable Christmas cheer. Scrooge. :(
     B:HoHoNo=false
 }
 
@@ -222,6 +227,8 @@ Machine {
     Pulverizer {
         I:BasePower=40
         B:Recipe.Enable=true
+
+        # If enabled, the Pulverizer will require Diamonds instead of Flint.
         B:RequireDiamonds=false
     }
 
@@ -255,8 +262,11 @@ Machine {
     }
 
     Accumulator {
+        # This controls how many mB/t the Accumulator generates. (Default: 25)
         I:BaseRate=25
         B:PassiveGeneration=false
+
+        # This controls how many mB/t the Accumulator generates without two or more adjacent source blocks, if enabled. (Default: 1)
         I:PassiveRate=1
         B:Recipe.Enable=true
     }
@@ -323,6 +333,8 @@ Plugins {
             B:Coal=true
             B:Cryotheum=true
             B:Ender=true
+
+            # This controls the maximum distance (in blocks) a player will teleport from drinking Ender. (Min: 8, Max: 65536)
             I:Ender.Range=16384
             B:Glowstone=true
             B:Pyrotheum=true
@@ -365,6 +377,7 @@ RecipeManagers {
         B:AllowRecipeOverwrite=false
 
         Ore {
+            # This sets the default rate for Ore->Dust conversion. This number is used in all automatically generated recipes.
             I:DefaultMultiplier=2
         }
 
@@ -379,6 +392,7 @@ RecipeManagers {
         }
 
         Wool {
+            # This sets the default rate for Wool->String conversion. This number is used in all automatically generated recipes.
             I:String=4
 
             Dye {
@@ -408,6 +422,7 @@ RecipeManagers {
         B:AllowRecipeOverwrite=false
 
         Log {
+            # This sets the default rate for Log->Plank conversion. This number is used in all automatically generated recipes.
             D:DefaultMultiplier=1.5
         }
 
@@ -421,7 +436,10 @@ RecipeManagers {
         B:AllowRecipeOverwrite=false
 
         Ore {
+            # This sets the default rate for Ore->Ingot conversion. This number is used in all automatically generated recipes.
             I:DefaultMultiplier=2
+
+            # This sets the boosted rate for Ore->Ingot conversion - when Rich Slag or Cinnabar Crystals are used. This number is used in all automatically generated recipes.
             I:SpecialMultiplier=3
         }
 
@@ -459,6 +477,7 @@ RecipeManagers {
         B:AllowRecipeOverwrite=false
 
         Crop {
+            # This sets the boosted rate for Crop growth - when Rich Phyto-Gro is used. This number is used in all automatically generated recipes.
             I:DefaultMultiplier=3
         }
 
@@ -478,25 +497,64 @@ RecipeManagers {
 
 
 Security {
+    # Enable this to allow for Energy Cells to be securable.
     B:Cell.All.Securable=true
+
+    # Enable this to allow for Activators to be securable.
     B:Device.Activator.Securable=true
+
+    # Enable this to allow for Breakers to be securable.
     B:Device.Breaker.Securable=true
+
+    # Enable this to allow for Nullifiers to be securable.
     B:Device.Nullifier.Securable=true
+
+    # Enable this to allow for Workbenches to be securable.
     B:Device.Workbench.Securable=true
+
+    # Enable this to allow for Dynamos to be securable.
     B:Dynamo.All.Securable=true
+
+    # Enable this to allow for Accumulators to be securable.
     B:Machine.Accumulator.Securable=true
+
+    # Enable this to allow for Assemblers to be securable.
     B:Machine.Assembler.Securable=true
+
+    # Enable this to allow for Chargers to be securable.
     B:Machine.Charger.Securable=true
+
+    # Enable this to allow for Crucibles to be securable.
     B:Machine.Crucible.Securable=true
+
+    # Enable this to allow for Extruders to be securable.
     B:Machine.Extruder.Securable=true
+
+    # Enable this to allow for Furnaces to be securable.
     B:Machine.Furnace.Securable=true
+
+    # Enable this to allow for Insolators to be securable.
     B:Machine.Insolator.Securable=true
+
+    # Enable this to allow for Precipitators to be securable.
     B:Machine.Precipitator.Securable=true
+
+    # Enable this to allow for Pulverizers to be securable.
     B:Machine.Pulverizer.Securable=true
+
+    # Enable this to allow for Sawmills to be securable.
     B:Machine.Sawmill.Securable=true
+
+    # Enable this to allow for Smelters to be securable.
     B:Machine.Smelter.Securable=true
+
+    # Enable this to allow for Transposers to be securable.
     B:Machine.Transposer.Securable=true
+
+    # Enable this to allow for Satchels to be securable.
     B:Satchel.All.Securable=true
+
+    # Enable this to allow for Strongboxes to be securable.
     B:Strongbox.All.Securable=true
 }
 
