botania config changes

--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -35,7 +35,7 @@ general {
     D:flowerParticles.frequency=0.75
 
     # Set to true to use alternate flower textures by Futureazoo, not all flowers are textured. http://redd.it/2b3o3f
-    B:flowerTextures.alt=false
+    B:flowerTextures.alt=true
 
     # Set to false to disable the rotating items in the petal and rune entries in the Lexica Botania.
     B:lexicon.enable.rotatingItems=true
@@ -80,10 +80,10 @@ general {
     B:wandBeam.static=false
 
     # The density of each botania flower patch generataed, defaults to 16, the lower the number, the less each patch will have.
-    I:worldgen.flower.density=16
+    I:worldgen.flower.density=20
 
     # The quanity of botania flower patches to generate in the world, defaults to 2, the lower the number the less patches generate.
-    I:worldgen.flower.quantity=2
+    I:worldgen.flower.quantity=1
 
     # The quantity of botania mushrooms to generate underground, in the world, defaults to 40, the lower the number the less patches generate.
     I:worldgen.mushroom.quantity=40
