nether ores config changes

--- a/config/powercrystals/netherores/common.cfg
+++ b/config/powercrystals/netherores/common.cfg
@@ -13,7 +13,7 @@ Overrides {
 
 general {
     # If true, when NetherOres are mined, nearby pigmen become angry to the player.
-    B:AngryPigmenEnable=true
+    B:AngryPigmenEnable=false
 
     # NetherOre explosions can trigger more explosions if true. Does nothing if ExplosionEnable is false.
     B:ExplosionChainReactEnable=true
@@ -22,10 +22,10 @@ general {
     B:ExplosionEnable=true
 
     # How powerful an explosion will be. Creepers are 3, TNT is 4, electrified creepers are 6. This affects both the ability of the explosion to punch through blocks as well as the blast radius.
-    I:ExplosionPower=2
+    I:ExplosionPower=3
 
     # The likelyhood an adjacent netherore will turn into an armed ore when one is mined. Percent chance out of 1000 (lower is less likely).
-    I:ExplosionProbability=75
+    I:ExplosionProbability=50
 
     # NetherOres have a higher chance to explode when mined with fortune if true.
     B:FortuneExplosionEnable=true
@@ -540,7 +540,7 @@ worldgen {
         I:BlocksPerGroup=12
 
         # If true, Hellfish will spawn in the Nether. Note that setting this false will not kill active Hellfish mobs.
-        B:Enable=true
+        B:Enable=false
 
         # If true, Hellfish will spawn from broken NetherOres.
         B:EnableSpawningFromOre=false
@@ -551,7 +551,7 @@ worldgen {
         I:MinY=126
 
         # Retroactively generate HellFish
-        B:Retrogen=true
+        B:Retrogen=false
 
         # The chance out of 10000 that a broken ore will spawn a hellfish.
         I:SpawningFromOreChance=1000
@@ -791,7 +791,7 @@ worldgen {
             I:BlocksPerGroup=4
 
             # Disables generation of Nikolite (overrides global ForceOreSpawn)
-            B:Disable=false
+            B:Disable=true
 
             # Force Nikolite to generate (overrides Disable)
             B:Force=false
@@ -810,7 +810,7 @@ worldgen {
             I:BlocksPerGroup=3
 
             # Disables generation of Ruby (overrides global ForceOreSpawn)
-            B:Disable=false
+            B:Disable=true
 
             # Force Ruby to generate (overrides Disable)
             B:Force=false
@@ -829,7 +829,7 @@ worldgen {
             I:BlocksPerGroup=3
 
             # Disables generation of Peridot (overrides global ForceOreSpawn)
-            B:Disable=false
+            B:Disable=true
 
             # Force Peridot to generate (overrides Disable)
             B:Force=false
@@ -848,7 +848,7 @@ worldgen {
             I:BlocksPerGroup=3
 
             # Disables generation of Sapphire (overrides global ForceOreSpawn)
-            B:Disable=false
+            B:Disable=true
 
             # Force Sapphire to generate (overrides Disable)
             B:Force=false
@@ -905,7 +905,7 @@ worldgen {
             I:BlocksPerGroup=4
 
             # Disables generation of Steel (overrides global ForceOreSpawn)
-            B:Disable=false
+            B:Disable=true
 
             # Force Steel to generate (overrides Disable)
             B:Force=false
@@ -924,7 +924,7 @@ worldgen {
             I:BlocksPerGroup=2
 
             # Disables generation of Iridium (overrides global ForceOreSpawn)
-            B:Disable=false
+            B:Disable=true
 
             # Force Iridium to generate (overrides Disable)
             B:Force=false
@@ -943,7 +943,7 @@ worldgen {
             I:BlocksPerGroup=7
 
             # Disables generation of Osmium (overrides global ForceOreSpawn)
-            B:Disable=false
+            B:Disable=true
 
             # Force Osmium to generate (overrides Disable)
             B:Force=false
@@ -981,7 +981,7 @@ worldgen {
             I:BlocksPerGroup=2
 
             # Disables generation of Titanium (overrides global ForceOreSpawn)
-            B:Disable=false
+            B:Disable=true
 
             # Force Titanium to generate (overrides Disable)
             B:Force=false
@@ -1000,7 +1000,7 @@ worldgen {
             I:BlocksPerGroup=6
 
             # Disables generation of Mithril (overrides global ForceOreSpawn)
-            B:Disable=false
+            B:Disable=true
 
             # Force Mithril to generate (overrides Disable)
             B:Force=false
@@ -1019,7 +1019,7 @@ worldgen {
             I:BlocksPerGroup=4
 
             # Disables generation of Adamantium (overrides global ForceOreSpawn)
-            B:Disable=false
+            B:Disable=true
 
             # Force Adamantium to generate (overrides Disable)
             B:Force=false
@@ -1038,7 +1038,7 @@ worldgen {
             I:BlocksPerGroup=4
 
             # Disables generation of Rutile (overrides global ForceOreSpawn)
-            B:Disable=false
+            B:Disable=true
 
             # Force Rutile to generate (overrides Disable)
             B:Force=false
@@ -1057,7 +1057,7 @@ worldgen {
             I:BlocksPerGroup=8
 
             # Disables generation of Tungsten (overrides global ForceOreSpawn)
-            B:Disable=false
+            B:Disable=true
 
             # Force Tungsten to generate (overrides Disable)
             B:Force=false
@@ -1076,7 +1076,7 @@ worldgen {
             I:BlocksPerGroup=6
 
             # Disables generation of Amber (overrides global ForceOreSpawn)
-            B:Disable=false
+            B:Disable=true
 
             # Force Amber to generate (overrides Disable)
             B:Force=false
@@ -1095,7 +1095,7 @@ worldgen {
             I:BlocksPerGroup=8
 
             # Disables generation of Tennantite (overrides global ForceOreSpawn)
-            B:Disable=false
+            B:Disable=true
 
             # Force Tennantite to generate (overrides Disable)
             B:Force=false
@@ -1114,7 +1114,7 @@ worldgen {
             I:BlocksPerGroup=5
 
             # Disables generation of Salt (overrides global ForceOreSpawn)
-            B:Disable=false
+            B:Disable=true
 
             # Force Salt to generate (overrides Disable)
             B:Force=false
@@ -1152,7 +1152,7 @@ worldgen {
             I:BlocksPerGroup=5
 
             # Disables generation of Magnesium (overrides global ForceOreSpawn)
-            B:Disable=false
+            B:Disable=true
 
             # Force Magnesium to generate (overrides Disable)
             B:Force=false
