disable enchanting plus repairs

--- a/config/eplus.cfg
+++ b/config/eplus.cfg
@@ -187,7 +187,7 @@ server {
     B:"Can players disenchant items they have not enchanted?"=false
     B:"Can the table disenchant items?"=true
     B:"Can the table enchant damaged items?"=true
-    B:"Can the table repair items?"=true
+    B:"Can the table repair items?"=false
     B:"Disregard item type?"=false
     D:"How blast resistant is the table?"=2000.0
     D:"How long to break the table?"=5.0
