Config/script update, add floco
also, lava power is fine

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -3076,6 +3076,18 @@ fossil {
 }
 
 
+funkylocomotion {
+    B:frame=false
+    B:frame2=false
+    B:frame3=false
+    B:frame4=false
+    B:moving=false
+    B:pusher=false
+    B:pusher.6=false
+    B:slider=false
+}
+
+
 harvestcraft {
     B:apiary=false
     B:beehive=true
