--- a/config/Artifice.cfg
+++ b/config/Artifice.cfg
@@ -65,14 +65,23 @@ general {
 
 
 "layer generation" {
+    B:"Generate Basalt Layer"=true
     B:"Generate BasaltLayer"=true
+    B:"Generate Blue Limestone Layer"=false
     B:"Generate Blue LimestoneLayer"=false
+    B:"Generate Brown Limestone Layer"=false
     B:"Generate Brown LimestoneLayer"=false
+    B:"Generate Gray Limestone Layer"=false
     B:"Generate Gray LimestoneLayer"=false
+    B:"Generate Green Limestone Layer"=false
     B:"Generate Green LimestoneLayer"=false
+    B:"Generate Light Gray Limestone Layer"=false
     B:"Generate Light Gray LimestoneLayer"=false
+    B:"Generate Marble Layer"=false
     B:"Generate MarbleLayer"=false
+    B:"Generate Red Limestone Layer"=false
     B:"Generate Red LimestoneLayer"=false
+    B:"Generate Tan Limestone Layer"=false
     B:"Generate Tan LimestoneLayer"=false
     I:"Maximum Basalt Layer Height"=10
     I:"Maximum Blue Limestone Layer Height"=70
@@ -111,6 +120,7 @@ general {
 
 recipes {
     B:"Allow crafting of ender pearls from dust"=true
+    B:"Allow crafting of glowsand"=true
 
     # Enable an alternate steel recipe which crafts steel dust from an iron ingot and coal/charcoal
     B:"Alternate Steel Recipe"=false
