--- a/config/cofh/thermalexpansion/common.cfg
+++ b/config/cofh/thermalexpansion/common.cfg
@@ -102,7 +102,7 @@ Dynamo {
 
     Magmatic {
         I:BasePower=80
-        B:Recipe.Enable=false
+        B:Recipe.Enable=true
     }
 
     Compression {
