--- a/config/Ztones.cfg
+++ b/config/Ztones.cfg
@@ -43,9 +43,9 @@ items {
     B:"Diamond Zane"=true
     B:"MSG Pill"=true
     B:"Mini Coal"=true
-    B:Ofanix=true
+    B:Ofanix=false
     B:"Splat Axe"=true
-    B:"Terrain Eater"=true
+    B:"Terrain Eater"=false
     B:"Totem Tool"=true
 }
 
