adjust mobs and starting inventory

--- a/config/MoCreatures/MoCreatures.cfg
+++ b/config/MoCreatures/MoCreatures.cfg
@@ -265,11 +265,11 @@ fishy {
 ####################
 
 flamewraith {
-    B:canspawn=true
-    I:frequency=5
-    I:maxchunk=3
-    I:maxspawn=1
-    I:minspawn=1
+    B:canspawn=false
+    I:frequency=0
+    I:maxchunk=0
+    I:maxspawn=0
+    I:minspawn=0
 }
 
 
@@ -292,10 +292,10 @@ fly {
 
 fox {
     B:canspawn=false
-    I:frequency=8
-    I:maxchunk=2
-    I:maxspawn=1
-    I:minspawn=1
+    I:frequency=0
+    I:maxchunk=0
+    I:maxspawn=0
+    I:minspawn=0
 }
 
 
@@ -305,10 +305,10 @@ fox {
 
 goat {
     B:canspawn=false
-    I:frequency=8
-    I:maxchunk=2
-    I:maxspawn=3
-    I:minspawn=1
+    I:frequency=0
+    I:maxchunk=0
+    I:maxspawn=0
+    I:minspawn=0
 }
 
 
@@ -330,11 +330,11 @@ hellrat {
 ####################
 
 horsemob {
-    B:canspawn=true
-    I:frequency=8
-    I:maxchunk=3
-    I:maxspawn=3
-    I:minspawn=1
+    B:canspawn=false
+    I:frequency=0
+    I:maxchunk=0
+    I:maxspawn=0
+    I:minspawn=0
 }
 
 
@@ -356,11 +356,11 @@ jellyfish {
 ####################
 
 kitty {
-    B:canspawn=true
-    I:frequency=8
-    I:maxchunk=3
-    I:maxspawn=2
-    I:minspawn=1
+    B:canspawn=false
+    I:frequency=0
+    I:maxchunk=0
+    I:maxspawn=0
+    I:minspawn=0
 }
 
 
@@ -447,11 +447,11 @@ mouse {
 ####################
 
 ogre {
-    B:canspawn=true
-    I:frequency=8
-    I:maxchunk=3
-    I:maxspawn=1
-    I:minspawn=1
+    B:canspawn=false
+    I:frequency=0
+    I:maxchunk=0
+    I:maxspawn=0
+    I:minspawn=0
 }
 
 
@@ -590,11 +590,11 @@ snail {
 ####################
 
 snake {
-    B:canspawn=true
-    I:frequency=8
-    I:maxchunk=3
-    I:maxspawn=2
-    I:minspawn=1
+    B:canspawn=false
+    I:frequency=0
+    I:maxchunk=0
+    I:maxspawn=0
+    I:minspawn=0
 }
 
 
@@ -630,10 +630,10 @@ turtle {
 
 werewolf {
     B:canspawn=false
-    I:frequency=8
-    I:maxchunk=3
-    I:maxspawn=4
-    I:minspawn=1
+    I:frequency=0
+    I:maxchunk=0
+    I:maxspawn=0
+    I:minspawn=0
 }
 
 
@@ -642,11 +642,11 @@ werewolf {
 ####################
 
 wildhorse {
-    B:canspawn=true
-    I:frequency=8
-    I:maxchunk=4
-    I:maxspawn=4
-    I:minspawn=1
+    B:canspawn=false
+    I:frequency=0
+    I:maxchunk=0
+    I:maxspawn=0
+    I:minspawn=0
 }
 
 
@@ -656,10 +656,10 @@ wildhorse {
 
 wraith {
     B:canspawn=false
-    I:frequency=1
-    I:maxchunk=3
-    I:maxspawn=1
-    I:minspawn=1
+    I:frequency=0
+    I:maxchunk=0
+    I:maxspawn=0
+    I:minspawn=0
 }
 
 
